# Claude_Code_Best_Practices

./: README.md
demo1/: galaxy_visualization.py
demo2/chatbot-rag/: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MIGRATION_NOTES.md  QUERY_FLOW_DIAGRAM.md  QUICKSTART.md  README.md  RUFF_SETUP.md  lint.sh  pyproject.toml  start.bat  start.sh
demo2/chatbot-rag/.claude/: settings.local.json
demo2/chatbot-rag/backend/: document_processor.py  main.py  rag_engine.py  session_manager.py
demo2/chatbot-rag/frontend/: app.py
demo2/chatbot-rag/static/css/: custom.css
demo2/chatbot-rag/static/js/: d3-visualization.js  threejs-background.js
notes/: 1_Introduction.md  2_What_is_Claude_Code.md  3_Setup_and_Codebase_Setup_for_Claude_Code.md  4_Adding_Features_in_Claude_Code.md
