[project]
name = "chatbot-rag"
version = "0.1.0"
description = "A RAG-based chatbot with document processing capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Backend Dependencies
    "fastapi>=0.121.2",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.7.4",  # Updated to satisfy langchain requirement
    "pydantic-settings>=2.1.0",

    # AI/ML Dependencies
    "google-generativeai",  # Let uv resolve compatible version
    "langchain>=1.0.0",
    "langchain-google-genai",  # Let uv resolve compatible version
    "chromadb>=1.3.4",
    "sentence-transformers>=5.1.2",

    # Document Processing
    "pypdf>=6.2.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=1.0.2",
    "markdown>=3.5.2",

    # Frontend
    "gradio>=5.49.1",

    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=22.0,<25.0",  # Compatible with gradio
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

# This is an application, not a library, so we don't need build-system config
