[project]
name = "chatbot-rag"
version = "0.1.0"
description = "A RAG-based chatbot with document processing capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Backend Dependencies
    "fastapi>=0.121.2",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.7.4",  # Updated to satisfy langchain requirement
    "pydantic-settings>=2.1.0",

    # AI/ML Dependencies
    "google-generativeai",  # Let uv resolve compatible version
    "langchain>=1.0.0",
    "langchain-google-genai",  # Let uv resolve compatible version
    "chromadb>=1.3.4",
    "sentence-transformers>=5.1.2",

    # Document Processing
    "pypdf>=6.2.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=1.0.2",
    "markdown>=3.5.2",

    # Frontend
    "gradio>=5.49.1",

    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=22.0,<25.0",  # Compatible with gradio
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
]

[tool.uv.sources]

# This is an application, not a library, so we don't need build-system config

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "data",
    "uploads",
    "logs",
]

# Linting rules
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

# Auto-fix settings
fixable = ["ALL"]
unfixable = []

# Import sorting (replaces isort)
[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Formatting
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
